--- a/src/app/componentes/navbar/navbar.component.html
+++ b/src/app/componentes/navbar/navbar.component.html
@@ -1,3 +1,24 @@
-<mat-toolbar color="warn">
-    <span>Proyectos</span>
+<mat-toolbar color="primary">
+    <mat-toolbar-row>
+        <button mat-icon-button>
+            <mat-icon>menu</mat-icon>
+        </button>
+        <h1>Proyectos de grado</h1>
+        <span class="menu-spacer"></span>
+        <!--
+        <div>
+            <button mat-icon-button (click)="changeMessage()">
+                <mat-icon>refresh</mat-icon>
+            </button>
+            <a mat-button routerLink="/" (click)="changeMessage()">
+                <mat-icon>refresh</mat-icon>
+            </a>
+        </div>
+        -->
+    </mat-toolbar-row>
+    <!--
+    <mat-toolbar-row>
+        <span style="font-size: 12px;">SimpleCRM helps you easily manage your contacts</span>
+      </mat-toolbar-row>
+    -->
 </mat-toolbar>
