--- a/src/app/componentes/proyectos-estudiante-add-edit/proyectos-estudiante-add-edit.component.html
+++ b/src/app/componentes/proyectos-estudiante-add-edit/proyectos-estudiante-add-edit.component.html
@@ -11,8 +11,8 @@
                     <mat-placeholder>Cedula estudiante</mat-placeholder>
                     <input matInput type="search" formControlName="cedula">
                     <button mat-button matSuffix mat-stroked-button aria-label="search" (click)="buscarEstudiante()">
-                      <mat-icon>search</mat-icon>
-                  </button>
+                        <mat-icon>search</mat-icon>
+                    </button>
                 </mat-form-field>
             </div>
 
@@ -37,34 +37,46 @@
                 <mat-form-field class="example-container" [style.fontSize.px]=12>
                     <mat-label>Nombre proyecto</mat-label>
                     <input matInput [readonly]="true" formControlName="nombreProyecto">
-                  </mat-form-field>
-                  <div *ngIf="myForm.get('nombreProyecto').hasError('required') && myForm.get('nombreProyecto').touched" style="margin-top: -20px;">
-                      <span class="mda-form-msg">Este campo es <strong>requerido</strong></span>
-                  </div>
-                  <div *ngIf="myForm.get('nombreProyecto').hasError('maxlength') && myForm.get('nombreProyecto').touched" style="margin-top: -20px;">
+                </mat-form-field>
+                <div *ngIf="myForm.get('nombreProyecto').hasError('required') && myForm.get('nombreProyecto').touched"
+                    style="margin-top: -20px;">
+                    <span class="mda-form-msg">Este campo es <strong>requerido</strong></span>
+                </div>
+                <div *ngIf="myForm.get('nombreProyecto').hasError('maxlength') && myForm.get('nombreProyecto').touched"
+                    style="margin-top: -20px;">
                     <span class="mda-form-msg">El campo debe tener como maximo <strong> 20 caracteres</strong></span>
                 </div>
             </div>
             <div class="col-lg-12">
                 <mat-form-field class="example-container" [style.fontSize.px]=12>
                     <mat-label>Descripcion</mat-label>
+                    <!--
                     <input matInput [readonly]="true" formControlName="descripcionProyecto">
-                  </mat-form-field>
-                  <div *ngIf="myForm.get('descripcionProyecto').hasError('required') && myForm.get('descripcionProyecto').touched" style="margin-top: -20px;">
+                    -->
+                    <textarea matInput 
+                        formControlName="descripcionProyecto"
+                        rows="15"
+                        [readonly]="true"
+                        >
+                    </textarea>
+                </mat-form-field>
+
+                <div *ngIf="myForm.get('descripcionProyecto').hasError('required') && myForm.get('descripcionProyecto').touched"
+                    style="margin-top: -20px;">
                     <span class="mda-form-msg">Este campo es <strong>requerido</strong></span>
                 </div>
-                <div *ngIf="myForm.get('descripcionProyecto').hasError('email') && myForm.get('descripcionProyecto').touched" style="margin-top: -20px;">
+                <div *ngIf="myForm.get('descripcionProyecto').hasError('email') && myForm.get('descripcionProyecto').touched"
+                    style="margin-top: -20px;">
                     <span class="mda-form-msg">Este campo es <strong>requerido</strong></span>
                 </div>
             </div>
-            
+
             <br>
             <div class="col-lg-12">
-                <button class="btn btn-success btn-lg float-right" [disabled]="myForm.invalid"
-                type="button" style="margin-left: 10px;" (click)="guardarEstudianteProyecto()">Aceptar</button>
-                <button class="btn btn-secondary btn-lg float-right" routerLink="/"
-                    (click)="changeMessage()"
-                        type="button">Cancelar</button>
+                <button class="btn btn-success btn-lm float-right" [disabled]="myForm.invalid" type="button"
+                    style="margin-left: 10px;" (click)="guardarEstudianteProyecto()">Aceptar</button>
+                <button class="btn btn-secondary btn-lm float-right" routerLink="/" (click)="changeMessage()"
+                    type="button">Cancelar</button>
             </div>
         </form>
     </div>
