--- a/src/app/componentes/navbar/navbar.component.html
+++ b/src/app/componentes/navbar/navbar.component.html
@@ -5,16 +5,16 @@
         </button>
         <h1>Proyectos de grado</h1>
         <span class="menu-spacer"></span>
-        <!--
+        
         <div>
-            <button mat-icon-button (click)="changeMessage()">
+            <button mat-icon-button routerLink="/" (click)="changeMessage()">
                 <mat-icon>refresh</mat-icon>
             </button>
-            <a mat-button routerLink="/" (click)="changeMessage()">
-                <mat-icon>refresh</mat-icon>
+            <a mat-button routerLink="reporte" (click)="changeMessage()">
+                <mat-icon>list_alt</mat-icon>
             </a>
         </div>
-        -->
+        
     </mat-toolbar-row>
     <!--
     <mat-toolbar-row>
