--- a/src/styles.css
+++ b/src/styles.css
@@ -18,7 +18,7 @@ button:focus {
 
 .info-dialog {
     color: white !important;
-    background-color: #cee0fc !important;    
+    background-color: #5289e2 !important;    
 }
 
 .error-dialog {    
